# cowork-trading-stack

./: .gitignore  EXCHANGES.md  README.md  REFERRALS.md
00-vibe-coding-basics/: 01-claude-code-setup.md  02-prompting-patterns.md  03-memory-system.md  04-cowork-workflow.md  05-debugging-with-ai.md  06-craftmanship-patterns.md  07-deep-modules.md  README.md
50-rust-acceleration/rust-services/gap-recorder/: gap_recorder_verify.py  pyproject.toml
50-rust-acceleration/rust-services/gap-recorder/src/: lib.rs  main.rs
50-rust-acceleration/rust-services/gap-recorder/tests/: integration.rs
60-ops-runbooks/: 01-tmux-deployment.md  02-systemd-service.md  03-windows-vs-linux.md  04-git-private-flow.md  05-obsidian-pipeline.md  README.md
80-obsidian-vault/: 01-vault-structure.md  02-templates-collection.md  03-dataview-dashboards.md  04-wikilink-patterns.md  05-ai-integration.md  06-content-pipeline.md  README.md
99-glossary/: README.md
assets/: .gitkeep
aster-spot-buyer/: README.md  aster.py  ethereal_aster_farmer.py  var_aster_farmer.py
backtest-templates/: README.md  backtest_bb_upper_short_sol_1h.json  backtest_bb_upper_short_sol_1h.md  backtest_mean_rev_btc_15m.json  backtest_mean_rev_btc_15m.md  backtest_rsi70_cont_btc_4h.json  backtest_rsi70_cont_btc_4h.md  backtest_rsi70_cont_eth_4h.json  backtest_rsi70_cont_eth_4h.md  backtest_rsi70_cont_sol_4h.json  backtest_rsi70_cont_sol_4h.md  backtest_supertrend_ai_btc_4h.json  backtest_supertrend_ai_btc_4h.md  backtest_supertrend_btc_1d.json  backtest_supertrend_btc_1d.md  backtester.py  candle_fetcher.py  run_backtest_mean_rev_btc_15m.py  run_backtest_supertrend_btc_1d.py
cross-venue-arb-scanner/: README.md  dexscreener_emoji_scanner.py  funding_collector.py  funding_monitor.py  funding_report.py  funding_scan.py  hyper_listing_arb_scanner.py
en/: 00-before-you-start.md  01-why-automation-first.md  02-getting-started-with-cowork.md  03-code-codex-memory.md  04-obsidian-telegram.md  13-roadmap.md  (+10 more)
rust-services/gap-recorder/: Cargo.toml  gap_recorder_benchmark.py  mpdex_gap_recorder_bridge.py
rust-services/gap-recorder/benches/: bench_throughput.py
rust-services/gap-recorder/src/: db.rs  http.rs  ipc.rs  state.rs
rust-services/hl-sign/: Cargo.toml  benchmark.py  generate_vectors.py  pyproject.toml  vectors.json  verify_vectors.py
rust-services/hl-sign/src/: eip712.rs  lib.rs  msgpack_enc.rs
(+311 files in other folders)
