[package]
name = "mpdex_hl_sign"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpdex_hl_sign"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
