[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "mpdex-hl-sign"
version = "0.1.0"
description = "Rust-backed Hyperliquid EIP-712 signing (drop-in mpdex_hl_sign)"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "mpdex_hl_sign"
features = ["pyo3/extension-module"]
strip = true
