[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "mpdex-gap-recorder"
version = "0.1.0"
description = "Rust-backed batched SQLite recorder for price gaps / BBO spreads"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "mpdex_gap_recorder"
features = ["pyo3/extension-module"]
strip = true
